--- a/package.json
+++ b/package.json
@@ -9,10 +9,35 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.4.5",
+    "@react-native-community/datetimepicker": "^6.7.1",
+    "@react-navigation/drawer": "^6.5.5",
+    "@react-navigation/native": "^6.1.1",
+    "@react-navigation/stack": "^6.3.9",
+    "@reduxjs/toolkit": "^1.9.1",
     "expo": "~47.0.8",
+    "expo-build-properties": "~0.4.1",
+    "expo-firebase-recaptcha": "^2.3.1",
+    "expo-image-picker": "~14.0.2",
+    "expo-location": "^15.0.1",
     "expo-status-bar": "~1.4.2",
+    "firebase": "^9.6.11",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "0.70.5",
+    "react-native-date-picker": "^4.2.6",
+    "react-native-dotenv": "^3.4.6",
+    "react-native-dropdown-picker": "^5.4.3",
+    "react-native-dropdown-select-list": "^2.0.4",
+    "react-native-gifted-chat": "^1.1.0",
+    "react-native-google-places-autocomplete": "^2.5.1",
+    "react-native-maps": "^1.3.2",
+    "react-native-modal-datetime-picker": "^14.0.0",
+    "react-native-reanimated": "~2.12.0",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-webview": "^11.26.0",
+    "react-redux": "^8.0.5",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
