--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.5.1",
     "@gorhom/bottom-sheet": "^4.4.5",
+    "@react-native-clipboard/clipboard": "^1.11.1",
     "@react-native-community/datetimepicker": "^6.7.1",
     "@react-navigation/drawer": "^6.5.5",
     "@react-navigation/native": "^6.1.1",
@@ -31,6 +33,7 @@
     "react-native-gifted-chat": "^1.1.0",
     "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-maps": "^1.3.2",
+    "react-native-material-dropdown": "^0.11.1",
     "react-native-modal-datetime-picker": "^14.0.0",
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "^4.4.1",
