--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^2.5.1",
+    "@expo/webpack-config": "^0.17.4",
     "@gorhom/bottom-sheet": "^4.4.5",
     "@react-native-clipboard/clipboard": "^1.11.1",
     "@react-native-community/datetimepicker": "^6.7.1",
@@ -19,9 +20,12 @@
     "@reduxjs/toolkit": "^1.9.1",
     "expo": "~47.0.8",
     "expo-build-properties": "~0.4.1",
+    "expo-constants": "~14.0.2",
     "expo-firebase-recaptcha": "^2.3.1",
     "expo-image-picker": "~14.0.2",
     "expo-location": "^15.0.1",
+    "expo-notifications": "^0.18.1",
+    "expo-permissions": "^14.1.1",
     "expo-status-bar": "~1.4.2",
     "firebase": "^9.6.11",
     "react": "18.1.0",
@@ -30,14 +34,19 @@
     "react-native-dotenv": "^3.4.6",
     "react-native-dropdown-picker": "^5.4.3",
     "react-native-dropdown-select-list": "^2.0.4",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-gifted-chat": "^1.1.0",
     "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-maps": "^1.3.2",
+    "react-native-maps-directions": "^1.9.0",
     "react-native-material-dropdown": "^0.11.1",
     "react-native-modal-datetime-picker": "^14.0.0",
+    "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "^4.4.1",
+    "x": "^1.0.3",
     "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "^0.18.12",
     "react-native-webview": "^11.26.0",
     "react-redux": "^8.0.5",
     "styled-components": "^5.3.6"
